# unoplat-code-confluence

./: .gitignore  404.html  AGENTS.md  APP_CHANGELOG.md  CLAUDE.md  CNAME  Contribution_Guidelines.md  Dockerfile.dev-workflow-python  Dockerfile.dev-workflow-typescript  GEMINI.md  LICENSE  Limitations_Resolutions.md  NetworkClient.java  README.md  Taskfile.yml  Tiltfile  _shell.html  architecture.md  funding.json  index.html  local-docker-compose.yml  nebula-docker-compose.yaml  opensearch.xml  output.json  pages.json  prod-docker-compose.yml  search-index.json  setup-hooks.sh  sitemap.xml  skills-lock.json  tilt-docker-compose.yml  version.txt
codebase_understanding/: codebase_summary.json  codebase_summary.md  example_config.json  loguru.json  main.py  main_old.py  pyproject.toml  summarised_node_standard.txt
codebase_understanding/codeagent/: __init__.py  current_item.py  unoplat_agent.py  unoplat_custom_current_item_tool.py
codebase_understanding/codebaseparser/: ArchGuardHandler.py
codebase_understanding/data_models/: __init__.py  chapi_unoplat_fieldmodel.py  chapi_unoplat_function.py  chapi_unoplat_functioncall.py  chapi_unoplat_position.py
codebase_understanding/downloader/: downloader.py
codebase_understanding/loader/: iparse_json.py  parse_json.py
codebase_understanding/nodeparser/: __init__.py  isummariser.py  nodesummariser.py
codebase_understanding/settings/: __init__.py  appsettings.py
codebase_understanding/utility/: total_file_count.py
dspy-llama-index-playground/: README.md  codeschemaparser.py  codeschematoolspec.py  example.py  hello-llamaindex-json.py  hello-pydantic-parse.py  hello-raw-lm.py  pyproject.toml
dspy-llama-index-playground/codebase_understanding/: main.py  pyproject.toml
dspy-llama-index-playground/experiments/: coderepoassist.py  hello-dspy-ollama.py  hello-gsm8k.py  hello-local-llamaindex.py  sample_md.py  testingPydantic.py
experiments/tree-sitter-debug-cli/: main.py  pyproject.toml
unoplat-code-confluence/: .isort.cfg  CHANGELOG.md  README.md  __main__.py  codebase_overview_spec.md  codebase_summary.md  codebase_summary_old.md  config.dev.json  dspy_class_summary.py  dspy_code_experiment.py  dspy_codebase_overview_summary.py  dspy_codebase_summary.py  dspy_function_summary.py  dspy_package_summary.py  dspy_unoplat_code_confluence.ipynb  example_config.json  example_config_code_confluence_current.json  mock_node.json  mypy.ini  performance.md  poetry.toml  pydantic_Experiment.py  pyproject.toml  requirements_utils.py  ruff.toml  springstarterjava1_20240701111627.md  springstarterjava1_20240708115959.md  springstarterjava1_codes.json  unoplat_code_confluence_codes.json  unoplat_codebase_summary.json
unoplat-code-confluence-cli/: AGENTS.md  CHANGELOG.md  README.md  Taskfile.yml  app-fetch-mechanism.md  app_interfaces.md  business_domain_references.md  dependencies_overview.md  example_config_code_confluence_current.json  pyproject.toml
unoplat-code-confluence-cli/unoplat_code_confluence_cli/: __main__.py
unoplat-code-confluence-commons/: AGENTS.md  CHANGELOG.md  README.md  Taskfile.yml  app_interfaces.md  business_domain_references.md  business_logic_references.md  dependencies_overview.md  poetry.toml  pyproject.toml  ruff.toml  schema_documentation.md  structural_signature_models.py
unoplat-code-confluence-commons/tests/: __init__.py  test_engine_models.py  test_framework_identity_schema.py  test_graph_models.py
unoplat-code-confluence-commons/unoplat_code_confluence_commons/: __init__.py
unoplat-code-confluence-ingestion/code-confluence-flow-bridge/: .coverage  .dockerignore  .gitignore  .isort.cfg  AGENTS.md  CHANGELOG.md  CLAUDE.md  ContributionGuidelines.md  Dockerfile  Dockerfile.dev  README.md  Taskfile.yml  app_interfaces.md  ast_debug.json  business_domain_references.md  business_logic_references.md  coverage.xml  dependencies_overview.md  docker-compose-dependencies-test.yml  docker-compose-prod.yml  example_github_repo_response.json  github_response_schema.json  local-dependencies-core-docker-compose.yml  local-dependencies-only-docker-compose.yml  local-docker-compose.yml  loguru-antipatterns.md  loguru.md  mypy.ini  otel-collector-config.yaml  package.json  prod-docker-compose.yml  prometheus.yml  pyproject.toml  pytest.ini  ruff.toml  schema_documentation.md  supertoken_docker_compose.yaml  tiltfile  updates_nested_function_call.md
unoplat-code-confluence-openmetadata/: .gitignore  AGENTS.md  PREREQUISITES.md  REGISTER_CUSTOM_PROPERTIES.md  RUN_WORKFLOW.md  Taskfile.yml  app_interfaces.md  business_domain_references.md  dependencies_overview.md  pyproject.toml
unoplat-code-confluence-openmetadata/deployment/: docker-compose.yml
unoplat-code-confluence-openmetadata/examples/: workflow.yaml
unoplat-code-confluence-query-engine/: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  Taskfile.yml  app_interfaces.md  business_domain_references.md  business_logic_references.md  dependencies_overview.md  experiment_graph_cypher_query.ipynb  local-dependencies-docker-compose.yml  local-dependencies-without-flow-bridge-docker-compose.yml  mcp-servers.json  pyproject.toml  ruff.toml
unoplat-code-confluence-query-engine/.zed/: settings.json
unoplat-code-confluence-query-engine/experiments/: mock_sse_server.py
unoplat-code-confluence-query-engine/scripts/: commons_data_model_files.json  dump_commons_data_model_files.py
unoplat-code-confluence-query-engine/tests/: conftest.py  test_app_interfaces_mapper.py  test_app_interfaces_renderer.py
unoplat-code-confluence-query-engine/unoplat_code_confluence_query_engine/: __main__.py  query_engine_style.tcss
unoplat-code-confluence/data_models/: __init__.py  chapi_unoplat_annotation.py  chapi_unoplat_class_fieldmodel.py  chapi_unoplat_class_summary.py  chapi_unoplat_codebase.py  chapi_unoplat_function.py  chapi_unoplat_function_summary.py  chapi_unoplat_functioncall.py  chapi_unoplat_node.py  chapi_unoplat_package.py  chapi_unoplat_parameter.py  unoplat_function_field_model.py
(+2790 files in other folders)
