[tool.poetry]
name = "dspyplayground"
version = "0.1.0"
description = ""
authors = ["JayGhiya <ghiya6548@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dspy = "^0.1.5"
llama-index = "^0.10.35"
llama-index-llms-ollama = "^0.1.3"
marko = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
