[tool.poetry]
name = "dspy-finetune-prompt"
version = "0.1.0"
description = "This will be used to learn more about dspy and use its prompting techniques to get what we need when it comes to codebase confluence"
authors = ["JayGhiya <ghiya6548@gmail.com>"]
license = "apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dspy-ai = "^2.4.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
