[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unoplat-code-confluence-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "loguru>=0.7.3",
    "pydantic-settings>=2.7.0",
    "pydantic>=2.10.4",
    "httpx>=0.25.0",
]


[tool.uv.scripts]
unoplat-code-confluence-cli = "unoplat_code_confluence_cli.__main__:main"
