[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unoplat-code-confluence-cli"
version = "0.1.0"
description = "Code Confluence CLI tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "loguru>=0.7.3",
    "pydantic-settings>=2.7.0",
    "pydantic>=2.10.4",
    "httpx>=0.25.0",
]

[project.scripts]
code-confluence = "unoplat_code_confluence_cli.__main__:main"
