[tool.poetry]
name = "unoplat-code-confluence-commons"
version = "0.11.0"
description = "this will hold common operations/models required across code confluence ingestion and query utilities"
authors = ["JayGhiya <ghiya6548@gmail.com>"]
readme = "README.md"
include = ["unoplat_code_confluence_commons/py.typed"]

[tool.poetry.dependencies]
python = "^3.10"
neomodel = "^5.4.2"
testcontainers = {extras = ["neo4j"], version = "^3.7.1"}
pytest = "8.3.4"
pytest-asyncio = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["unoplat_code_confluence_commons"]
testpaths = ["tests"]


[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module               = ["neomodel.*"]
ignore_missing_imports = true