[project]
name = "unoplat-code-confluence-commons"
version = "0.32.2"
description = "this will hold common operations/models required across code confluence ingestion and query utilities"
authors = [{ name = "JayGhiya", email = "ghiya6548@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "neomodel>=5.4.2,<6",
    "testcontainers[neo4j]>=3.7.1,<4",
    "pytest==8.3.4",
    "pytest-asyncio>=0.25.0,<0.26",
    "pydantic>=2.11.7",
    "sqlalchemy>=2.0.41",
    "sqlmodel>=0.0.24",
    "cryptography>=45.0.6",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["unoplat_code_confluence_commons"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module               = ["neomodel.*"]
ignore_missing_imports = true