[project]
name = "unoplat-code-confluence-query-engine"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.0.0",
    "aiopath>=0.7.7",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.1",
    "loguru>=0.7.3",
    "neomodel>=5.5.0",
    "pydantic-ai>=0.6.2",
    "qs-codec>=1.1.1",
    "sqlalchemy[asyncio]>=2.0.0",
    "sqlmodel>=0.0.24",
    "sse-starlette>=3.0.0",
    "unoplat-code-confluence-commons>=0.25.0",
]

[dependency-groups]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "docker>=6.0.0",
    "testcontainers>=3.7.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "temporalio>=1.9.0",
    "psycopg2-binary>=2.9.10"
]
dev = [
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "types-aiofiles>=24.1.0.20250801",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
# Register custom markers to silence unknown-mark warnings
markers = [
    "integration: integration tests connecting to external services",
]

[tool.uv.sources]
unoplat-code-confluence-commons = { git = "https://github.com/unoplat/unoplat-code-confluence.git", subdirectory = "unoplat-code-confluence-commons", rev = "unoplat-code-confluence-commons-v0.27.1" }
