[project]
name = "unoplat-code-confluence-query-engine"
version = "0.48.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.0.0",
    "aiopath>=0.7.7",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.1",
    #"fastmcp>=2.14.0",
    "ghapi>=1.0.10",
    "jinja2>=3.1.6",
    "logfire[fastapi]>=4.4.0",
    "loguru>=0.7.3",
    "markdown-it-py>=4.0.0",
    "pydantic-ai[bedrock,cohere,duckduckgo,groq,huggingface,mistral,temporal,web-fetch,xai]>=2.12.0,<3",
    "pydantic-ai-backend[docker]>=0.2.15,<0.3",
    "pydantic-ai-skills>=1.2.0,<2",
    "qs-codec>=1.1.1",
    "sqlalchemy[asyncio]>=2.0.0",
    "sqlmodel>=0.0.24",
    "sse-starlette>=3.0.0",
    "unoplat-code-confluence-commons>=0.25.0",
]

[dependency-groups]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "docker>=6.0.0",
    "testcontainers>=3.7.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.10"
]
dev = [
    "ruff>=0.1.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "types-aiofiles>=24.1.0.20250801",
    "memray>=1.19.3",
    "pyrefly>=1.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
# Register custom markers to silence unknown-mark warnings
markers = [
    "integration: integration tests connecting to external services",
]

[tool.uv.sources]
#NOTE: use it for local development to instantly see changes in the schema and its impact
#unoplat-code-confluence-commons = { path = "../unoplat-code-confluence-commons" }
unoplat-code-confluence-commons = { git = "https://github.com/unoplat/unoplat-code-confluence.git", subdirectory = "unoplat-code-confluence-commons", rev = "unoplat-code-confluence-commons-v0.48.0" }

[tool.pyrefly]
preset = "strict"
project-includes = ["src"]
project-excludes = ["**/__pycache__", ".venv", "dist", "build", "**/__init__.py"]
permissive-ignores = true
python-version = "3.13"
