[tool.poetry]
name = "unoplat_code_confluence"
version = "0.1.0"
description = "codebase understanding"
authors = ["JayGhiya <ghiya6548@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10, <=3.13"
llama-index-llms-ollama = "^0.1.3"
marko = "^2.0.3"
pydantic = "^2.7.1"
ruff = "^0.4.4"
loguru = "^0.7.2"
pygithub = ">=1.59.1,<2.0.0"
pypdf = ">=3.11.0,<4.0.0"
pydantic-settings = "^2.2.1"
litellm = "^1.37.19"
pytest = "^8.2.1"
crewai = {extras = ["tools"], version = "^0.30.11"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
