[tool.poetry]
name = "unoplat-code-confluence"
version = "0.13.4"
description = "codebase understanding"
authors = ["JayGhiya <ghiya6548@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10, <=3.13"
marko = "^2.0.3"
pydantic = "^2.7.1"
ruff = "^0.4.4"
loguru = "^0.7.2"
pygithub = ">=1.59.1,<2.0.0"
pypdf = ">=3.11.0,<4.0.0"
pydantic-settings = "^2.2.1"
litellm = "^1.37.19"
pytest = "^8.2.1"
dspy-ai = "^2.4.9"
packaging = "^24.1"
progiter = "^2.0.0"
sentence-transformers = "^3.1.1"
einops = "^0.8.0"
rich = "^13.9.2"
neo4j = "5.19.0"
neomodel = "^5.3.3"

[tool.poetry.scripts]
unoplat-code-confluence = "unoplat_code_confluence.__main__:main"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
