[project]
name = "code-confluence-flow-bridge"
version = "0.38.1"
description = "Bridge between Code Confluence User and Ingestion Workflow" 
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "pydantic-settings>=2.7.0",
    "pydantic>=2.10.4",
    "temporalio>=1.9.0",
    "loguru>=0.7.3",
    "gitpython>=3.1.43",
    "pygithub>=2.5.0",
    "requirements-parser>=0.11.0",
    "tomlkit>=0.13.2",
    "tree-sitter>=0.23.2",
    "tree-sitter-python>=0.23.6",
    "pytest>=8.3.4",
    "neomodel>=5.4.2",
    "unoplat-code-confluence-commons",
    "packaging>=24.2",
    "validate-pyproject[all]>=0.23",
    "sqlmodel>=0.0.24",
    "psycopg2>=2.9.10",
    "passlib[bcrypt]>=1.7.4",
    "gql[all]>=3.5.2",
    "opentelemetry-api>=1.32.1",
    "opentelemetry-sdk>=1.32.1",
    "opentelemetry-exporter-otlp>=1.32.1",
    "grpcio>=1.71.0",
    "opentelemetry-instrumentation-logging>=0.53b1",
    "asyncpg>=0.27.0",
    "greenlet>=3.1.1",
    "pyyaml>=6.0.2",
] 

[dependency-groups]
test = [
    "httpx>=0.28.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0"
]

[tool.uv.sources]
unoplat-code-confluence-commons = { git = "https://github.com/unoplat/unoplat-code-confluence.git", subdirectory = "unoplat-code-confluence-commons", rev = "unoplat-code-confluence-commons-v0.14.1" }


[tool.pytest.ini_options]
asyncio_mode = "auto"
